--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -1,4 +1,4 @@
-<!-- templates/home/about.html -->
+<!-- templates/home/contact.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +7,6 @@
 	<title>Movies Store :: About</title>
 </head>
 <body>
-	<h1>About page</h1>
+	<h1>Contact page</h1>
 </body>
 </html>
