--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,12 +1,6 @@
 <!-- templates/home/home.html -->
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Movies Store :: Home</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 	<h1>Home page</h1>
-</body>
-</html>
+{% endblock content %}
