--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Movies Store :: </title>
+	<title>{% block title %}Movies Store :: {% endblock title %}</title>
 </head>
 <body>
     <!-- Header -->
