--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,6 +1,10 @@
 <!-- templates/home/home.html -->
 {% extends 'base.html' %}
 
+{% block title %}
+{{ block.super }} {{ page_title }}
+{% endblock title %}
+
 {% block content %}
 	<h1>Home page</h1>
 {% endblock content %}
