--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <!-- Header -->
+    <nav>
+        <a href="{% url 'home:home' %}">Home</a> |
+        <a href="{% url 'home:about' %}">About</a> |
+        <a href="{% url 'home:contact' %}">Contact</a> |
+    </nav>
     <!-- Header -->
 
     <!-- Content -->
