--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,13 @@
-<!-- templates/base.html -->
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{% block title %}Movies Store :: {% endblock title %}</title>
+    <title>{% block title %}Movies Store :: {% endblock title %}</title>
+    <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/all.min.css' %}" rel="stylesheet" >
+    <link href="{% static 'assets/css/google-fonts.css' %}" rel="stylesheet">
+    <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}" ></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
     <!-- Header -->
