--- a/templates/base.html
+++ b/templates/base.html
@@ -4,17 +4,32 @@
 <head>
     <title>{% block title %}Movies Store :: {% endblock title %}</title>
     <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/all.min.css' %}" rel="stylesheet" >
-    <link href="{% static 'assets/css/google-fonts.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
     <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}" ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
     <!-- Header -->
-    <nav>
-        <a href="{% url 'home:home' %}">Home</a> |
-        <a href="{% url 'home:about' %}">About</a> |
-        <a href="{% url 'home:contact' %}">Contact</a> |
+    <nav class="p-3 navbar navbar-dark bg-dark navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'home:home' %}">
+            <img src="{% static 'assets/img/logo.png' %}" alt="logo" height="40" />
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" 
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto navbar-ml">
+                    <a class="nav-link" href="{% url 'home:home' %}">Home</a>
+                    <a class="nav-link" href="{% url 'home:about' %}">About</a>
+                    <a class="nav-link" href="{% url 'home:contact' %}">Contact</a>
+                </div>
+            </div>
+        </div>
     </nav>
     <!-- Header -->
 
@@ -26,6 +41,45 @@
     <!-- Content ends -->
 
     <!-- Footer -->
+    <section class="p-3 ms-footer d-none d-md-block">
+      <div class="container">
+        <div class="row mt-3 text-white">
+          <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-4">
+            <b>MOVIES STORE</b>
+            <hr />
+            <p>Welcome to Movies Store, your premier online destination for a cinematic 
+              adventure like no other! Dive into the world of movies from the comfort of your own home with our user-friendly 
+              and immersive online movie store.</p>
+          </div>
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+            <b>LINKS</b>
+            <hr />
+            <p><a class="nav-link" href="{% url 'home:about' %}">About</a></p>
+          </div>
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+            <b>CONTACT</b>
+            <hr />
+            <p><i class="fas fa-home me-2"></i> 150-2345 Tokyo-to, Japan</p>
+            <p><i class="fas fa-envelope me-2"></i> info@moviesstore.com</p>
+            <p><i class="fas fa-phone me-2"></i> +81 03-3333-3333</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="p-3 ms-footer-bottom bg-dark">
+      <div class="container d-flex justify-content-between">
+        <div class="me-5 text-white">
+          <span>DESIGNED BY <a href="https://www.x.com/danielgarax" target="_blank">DANIEL CORREA</a> & 
+            <a href="https://www.x.com/greglim81" target="_blank">GREG LIM</a>
+          </span> 
+          
+            </div><span class="sst col mx-auto text-center">Developed with <span><a href="https://github.com/gurnitha/2025-movies-store" target="_blank">LOVE</a></span> by <span><a href="https://github.com/gurnitha/2025-movies-store" target="_blank">ING Skill_Sets Training</a></span></span>
+        
+        <div class="text-white">
+          <span>© Copyright - 2024</span>
+        </div>
+      </div>
+    </section>
     <!-- Footer -->
 </body>
 </html>
