--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -13,6 +13,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto navbar-ml">
                     <a class="nav-link" href="{% url 'home:home' %}">Home</a>
+                    <a class="nav-link" href="{% url 'movies:movies' %}">Movies</a>
                     <a class="nav-link" href="{% url 'home:about' %}">About</a>
                     <a class="nav-link" href="{% url 'home:contact' %}">Contact</a>
                 </div>
