--- a/templates/movies/movies.html
+++ b/templates/movies/movies.html
@@ -16,54 +16,21 @@
             </div>
         </div>
         <div class="row">
+            {% for movie in template_data.movies %}
             <!-- card -->
             <div class="col-md-4 col-lg-3 mb-2">
                 <div class="p-2 card align-items-center pt-4">
-                    <img src="{% static 'assets/img/about.jpg' %}" class="card-img-top rounded">
+                    <img src="{% static 'assets/img/about.jpg' %}" 
+                        class="card-img-top rounded">
                     <div class="card-body text-center">
                         <a href="" class="btn bg-dark text-white">
-                        Inception
+                        {{ movie.name }}
                         </a>
                     </div>
                 </div>
             </div>
             <!-- card ends -->
-            <!-- card -->
-            <div class="col-md-4 col-lg-3 mb-2">
-                <div class="p-2 card align-items-center pt-4">
-                    <img src="{% static 'assets/img/about.jpg' %}" class="card-img-top rounded">
-                    <div class="card-body text-center">
-                        <a href="" class="btn bg-dark text-white">
-                        Avatar
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- card ends -->
-            <!-- card -->
-            <div class="col-md-4 col-lg-3 mb-2">
-                <div class="p-2 card align-items-center pt-4">
-                    <img src="{% static 'assets/img/about.jpg' %}" class="card-img-top rounded">
-                    <div class="card-body text-center">
-                        <a href="" class="btn bg-dark text-white">
-                        The Dark Knight
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- card ends -->
-            <!-- card -->
-            <div class="col-md-4 col-lg-3 mb-2">
-                <div class="p-2 card align-items-center pt-4">
-                    <img src="{% static 'assets/img/about.jpg' %}" class="card-img-top rounded">
-                    <div class="card-body text-center">
-                        <a href="" class="btn bg-dark text-white">
-                        Titanic
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- card ends -->
+            {% endfor %}
         </div>
     </div>
 </div>
