--- a/templates/movies/movies.html
+++ b/templates/movies/movies.html
@@ -23,7 +23,7 @@
                     <img src="{% static 'assets/img/about.jpg' %}" 
                         class="card-img-top rounded">
                     <div class="card-body text-center">
-                        <a href="" class="btn bg-dark text-white">
+                        <a href="{% url 'movies:movie' id=movie.id %}" class="btn bg-dark text-white">
                         {{ movie.name }}
                         </a>
                     </div>
