--- a/templates/movies/movies.html
+++ b/templates/movies/movies.html
@@ -13,6 +13,23 @@
             <div class="col mx-auto mb-3">
                 <h2>List of Movies</h2>
                 <hr />
+                <!-- Search -->
+                <p class="card-text">
+                  <form method="GET">
+                    <div class="row">
+                      <div class="col-auto">
+                        <div class="input-group col-auto">
+                          <div class="input-group-text">Search</div>
+                          <input type="text" class="form-control" name="search">
+                        </div>
+                      </div>
+                      <div class="col-auto">
+                        <button class="btn bg-dark text-white" type="submit">Search</button>
+                      </div>
+                    </div>
+                  </form>
+                </p>
+                <!-- Search ends -->
             </div>
         </div>
         <div class="row">
