--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -17,9 +17,8 @@
                     <a class="nav-link" href="{% url 'home:about' %}">About</a>
                     <a class="nav-link" href="{% url 'home:contact' %}">Contact</a>
                     <div class="vr bg-white mx-2 d-none d-lg-block"></div>
-                    <a class="nav-link" href="{% url 'accounts:signup' %}">
-                        Signup
-                    </a>
+                    <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                    <a class="nav-link" href="{% url 'accounts:signup' %}">Signup</a>
                 </div>
             </div>
         </div>
