--- a/templates/movies/movie.html
+++ b/templates/movies/movie.html
@@ -34,6 +34,9 @@
               href="{% url 'movies:edit_review' id=template_data.movie.id review_id=review.id %}">
               Edit
             </a>
+             <a class="btn btn-danger" href="{% url 'movies:delete_review' id=template_data.movie.id review_id=review.id %}">
+              Delete
+            </a>
             {% endif %}
           </li>
           {% endfor %}
