--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -14,6 +14,7 @@
                 <div class="navbar-nav ms-auto navbar-ml">
                     <a class="nav-link" href="{% url 'home:home' %}">Home</a>
                     <a class="nav-link" href="{% url 'movies:movies' %}">Movies</a>
+                     <a class="nav-link" href="{% url 'cart:cart_list' %}">Cart</a>
                     <a class="nav-link" href="{% url 'home:about' %}">About</a>
                     <a class="nav-link" href="{% url 'home:contact' %}">Contact</a>
                     <div class="vr bg-white mx-2 d-none d-lg-block"></div>
