--- a/templates/movies/movie.html
+++ b/templates/movies/movie.html
@@ -10,15 +10,39 @@
 <div class="p-3">
   <div class="container">
     <div class="row mt-3">
+
+      <!-- Content left -->
       <div class="col-md-6 mx-auto mb-3">
         <h2>{{ template_data.movie.name }}</h2>
         <hr />
         <p><b>Description:</b> {{ template_data.movie.description }}</p>
         <p><b>Price:</b> ${{ template_data.movie.price }}</p>
 
+        <!-- Add to cart -->
+        <p class="card-text">
+          <form method="post" action="{% url 'cart:cart_add' id=template_data.movie.id %}">
+            <div class="row">
+              {% csrf_token %}
+              <div class="col-auto">
+                <div class="input-group col-auto">
+                  <div class="input-group-text">Quantity
+                    </div>
+                  <input type="number" min="1" max="10" class="form-control quantity-input" name="quantity" value="1">
+                </div>
+              </div>
+              <div class="col-auto">
+                <button class="btn bg-dark text-white" type="submit">
+                  Add to cart
+                </button>
+              </div>
+            </div>
+          </form>
+        </p>
+        <!-- Add to cart ends -->
+
+        <!-- Reviews -->
         <h2>Reviews</h2>
         <hr />
-        
         <ul class="list-group">
           {% for review in template_data.reviews %}
           <li class="list-group-item pb-3 pt-3">
@@ -41,7 +65,9 @@
           </li>
           {% endfor %}
         </ul>
+        <!-- Reviews ends -->
 
+        <!-- Reviews form -->
         {% if user.is_authenticated %}
         <div class="container mt-4">
           <div class="row justify-content-center">
@@ -68,10 +94,16 @@
           </div>
         </div>
         {% endif %}
+        <!-- Reviews form ends -->
       </div>
+      <!-- Content left ends -->
+
+      <!-- Movie image -->
       <div class="col-md-6 mx-auto mb-3 text-center">
         <img src="{{ template_data.movie.image.url }}" class="rounded img-card-400" />
       </div>
+      <!-- Movie image ends -->
+      
     </div>
   </div>
 </div>
