--- a/templates/cart/cart_list.html
+++ b/templates/cart/cart_list.html
@@ -43,6 +43,17 @@
             <div class="text-end">
                 <a class="btn btn-outline-secondary mb-2"><b>Total
                 to pay:</b> ${{ template_data.cart_total }}</a>
+                
+                <!-- Menghapus movies dari cart -->
+                {% if template_data.movies_in_cart|length > 0 %}
+                <a href="{% url 'cart:cart_clear' %}">
+                    <button class="btn btn-danger mb-2">
+                        Remove all movies from Cart
+                    </button>
+                </a>
+                {% endif %}
+                <!-- Menghapus movies dari cart ends -->
+                
             </div>
         </div>
     </div>
